prove di position

--- a/index.html
+++ b/index.html
@@ -14,33 +14,35 @@
         <div class="float">
            <div class="container-float">
                <img class="img" src="img/1.webp" alt="foto1">
-               <span></span>
-               <span></span>
-               <span></span>
+               <div class="percentuale">-50%</div>
+               <span class="green">Sostenibilità</span>
+               <span class="heart"></span>
            </div>
            <p class="name">Levi's</p>
            <p class="style-type">Relaxed fit tee unisex</p>
            <p class="price">14,99<span>29,99</span></p>
         </div>
 <!--secondo float-->  
+
         <div class="float center">
            <div class="container-float">
                <img class="img" src="img/2.webp" alt="foto1">
                <span></span>
                <span></span>
-               <span></span>
+               <span class="heart"></span>
            </div>
            <p class="name">Levi's</p>
            <p class="style-type">Relaxed fit tee unisex</p>
            <p class="price">14,99<span>29,99</span></p>
         </div>
 <!--terzo float-->
+
         <div class="float right">
            <div class="container-float">
                <img class="img" src="img/3.webp" alt="foto1">
                <span></span>
                <span></span>
-               <span></span>
+               <span class="heart"></span>
            </div>
            <p class="name">Levi's</p>
            <p class="style-type">Relaxed fit tee unisex</p>
