primo blocco ultimato

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <div class="float">
            <div class="container-float">
                <img class="img" src="img/1.webp" alt="foto1">
-               <div class="percentuale">-50%</div>
+               <span class="discount">-50%</span>
                <span class="green">Sostenibilità</span>
                <span class="heart"></span>
            </div>
            <p class="name">Levi's</p>
            <p class="style-type">Relaxed fit tee unisex</p>
-           <p class="price">14,99<span>29,99</span></p>
+           <p class="price">14,99 <span>29,99</span></p>
         </div>
 <!--secondo float-->  
 
@@ -33,7 +33,7 @@
            </div>
            <p class="name">Levi's</p>
            <p class="style-type">Relaxed fit tee unisex</p>
-           <p class="price">14,99<span>29,99</span></p>
+           <p class="price">14,99 <span>29,99</span></p>
         </div>
 <!--terzo float-->
 
@@ -46,8 +46,9 @@
            </div>
            <p class="name">Levi's</p>
            <p class="style-type">Relaxed fit tee unisex</p>
-           <p class="price">14,99<span>29,99</span></p>
+           <p class="price">14,99 <span>29,99</span></p>
         </div>
+<!--quarto float-->        
 
 
 
