seconda parte float

--- a/index.html
+++ b/index.html
@@ -27,13 +27,12 @@
         <div class="float center">
            <div class="container-float">
                <img class="img" src="img/2.webp" alt="foto1">
-               <span></span>
-               <span></span>
+               <span class="discount">-30%</span>
                <span class="heart"></span>
            </div>
-           <p class="name">Levi's</p>
-           <p class="style-type">Relaxed fit tee unisex</p>
-           <p class="price">14,99 <span>29,99</span></p>
+           <p class="name">Guess</p>
+           <p class="style-type">Roses Tee</p>
+           <p class="price">20,99 <span>29,99</span></p>
         </div>
 <!--terzo float-->
 
@@ -49,6 +48,43 @@
            <p class="price">14,99 <span>29,99</span></p>
         </div>
 <!--quarto float-->        
+       
+        <div class="float">
+            <div class="container-float">
+                <img class="img" src="img/1.webp" alt="foto1">
+                <span class="discount">-50%</span>
+                <span class="green">Sostenibilità</span>
+                <span class="heart"></span>
+            </div>
+            <p class="name">Levi's</p>
+            <p class="style-type">Relaxed fit tee unisex</p>
+            <p class="price">14,99 <span>29,99</span></p>
+        </div>
+<!--quinto float-->  
+
+        <div class="float center">
+            <div class="container-float">
+                <img class="img" src="img/2.webp" alt="foto1">
+                <span class="discount">-30%</span>
+                <span class="heart"></span>
+            </div>
+            <p class="name">Guess</p>
+            <p class="style-type">Roses Tee</p>
+            <p class="price">20,99 <span>29,99</span></p>
+        </div>
+<!--sesto float-->
+
+        <div class="float right">
+            <div class="container-float">
+                <img class="img" src="img/3.webp" alt="foto1">
+                <span></span>
+                <span></span>
+            <span class="heart"></span>
+            </div>
+            <p class="name">Levi's</p>
+            <p class="style-type">Relaxed fit tee unisex</p>
+            <p class="price">14,99 <span>29,99</span></p>
+        </div>
 
 
 
