--- a/index.html
+++ b/index.html
@@ -14,76 +14,79 @@
         <div class="float">
            <div class="container-float">
                <img class="img" src="img/1.webp" alt="foto1">
+               <img  class="img-hover" src="img/1b.webp" alt="foto-hover">
                <span class="discount">-50%</span>
                <span class="green">Sostenibilità</span>
                <span class="heart"></span>
            </div>
            <p class="name">Levi's</p>
            <p class="style-type">Relaxed fit tee unisex</p>
-           <p class="price">14,99 <span>29,99</span></p>
+           <p class="price">14,99&euro; <span>29,99</span></p>
         </div>
 <!--secondo float-->  
 
         <div class="float center">
            <div class="container-float">
-               <img class="img" src="img/2.webp" alt="foto1">
+               <img class="img" src="img/2.webp" alt="foto2">
+               <img class="img-hover" src="img/2b.webp" alt="foto-hover">
                <span class="discount">-30%</span>
                <span class="heart"></span>
            </div>
            <p class="name">Guess</p>
            <p class="style-type">Roses Tee</p>
-           <p class="price">20,99 <span>29,99</span></p>
+           <p class="price">20,99&euro; <span>29,99</span></p>
         </div>
 <!--terzo float-->
 
         <div class="float right">
            <div class="container-float">
-               <img class="img" src="img/3.webp" alt="foto1">
-               <span></span>
-               <span></span>
+               <img class="img" src="img/3.webp" alt="foto3">
+               <img class="img-hover" src="img/3b.webp" alt="foto-hover">
+               <span class="discount">-30%</span>
                <span class="heart"></span>
            </div>
-           <p class="name">Levi's</p>
-           <p class="style-type">Relaxed fit tee unisex</p>
-           <p class="price">14,99 <span>29,99</span></p>
+           <p class="name">Come Zucchero filato</p>
+           <p class="style-type">Voglia di colori pastello</p>
+           <p class="price">129,99&euro;</p>
         </div>
 <!--quarto float-->        
        
         <div class="float">
             <div class="container-float">
-                <img class="img" src="img/1.webp" alt="foto1">
+                <img class="img" src="img/4.webp" alt="foto4">
+                <img class="img-hover" src="img/4b.webp" alt="foto-hover">
                 <span class="discount">-50%</span>
                 <span class="green">Sostenibilità</span>
                 <span class="heart"></span>
             </div>
             <p class="name">Levi's</p>
-            <p class="style-type">Relaxed fit tee unisex</p>
-            <p class="price">14,99 <span>29,99</span></p>
+            <p class="style-type">Tee Unisex</p>
+            <p class="price">14,99&euro; <span>29,99</span></p>
         </div>
 <!--quinto float-->  
 
         <div class="float center">
             <div class="container-float">
-                <img class="img" src="img/2.webp" alt="foto1">
-                <span class="discount">-30%</span>
+                <img class="img" src="img/5.webp" alt="foto5">
+                <img class="img-hover" src="img/5b.webp" alt="foto-hover">
                 <span class="heart"></span>
             </div>
             <p class="name">Guess</p>
             <p class="style-type">Roses Tee</p>
-            <p class="price">20,99 <span>29,99</span></p>
+            <p class="price">99,99&euro;</p>
         </div>
 <!--sesto float-->
 
         <div class="float right">
             <div class="container-float">
-                <img class="img" src="img/3.webp" alt="foto1">
-                <span></span>
-                <span></span>
-            <span class="heart"></span>
+                <img class="img" src="img/6.webp" alt="foto6">
+                <img class="img-hover" src="img/6b.webp" alt="foto-hover">
+                <span class="green no-discount">Sostenibilità</span>
+                <span class="heart"></span>
             </div>
-            <p class="name">Levi's</p>
-            <p class="style-type">Relaxed fit tee unisex</p>
-            <p class="price">14,99 <span>29,99</span></p>
+            <p class="name">Espirit</p>
+            <p class="style-type">Maglione-Black</p>
+            <p class="price">29,99&euro;</p>
         </div>
 
 
