fine esercizio bonus, sto cercando di migliorare nella pulizia della pagina html e css

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -13,7 +13,7 @@
 <!--primo float-->        
         <div class="float">
            <div class="container-float">
-              
+               <div class="img first"></div>
                <span class="discount">-50%</span>
                <span class="green">Sostenibilità</span>
                <span class="heart"></span>
@@ -26,8 +26,7 @@
 
         <div class="float center">
            <div class="container-float">
-               <img class="img" src="img/2.webp" alt="foto2">
-               <img class="img-hover" src="img/2b.webp" alt="foto-hover">
+               <div class="img second"></div>
                <span class="discount">-30%</span>
                <span class="heart"></span>
            </div>
@@ -39,8 +38,7 @@
 
         <div class="float right">
            <div class="container-float">
-               <img class="img" src="img/3.webp" alt="foto3">
-               <img class="img-hover" src="img/3b.webp" alt="foto-hover">
+               <div class="img third"></div>
                <span class="discount">-30%</span>
                <span class="heart"></span>
            </div>
@@ -52,8 +50,7 @@
        
         <div class="float">
             <div class="container-float">
-                <img class="img" src="img/4.webp" alt="foto4">
-                <img class="img-hover" src="img/4b.webp" alt="foto-hover">
+                <div class="img fourth"></div>
                 <span class="discount">-50%</span>
                 <span class="green">Sostenibilità</span>
                 <span class="heart"></span>
@@ -66,8 +63,7 @@
 
         <div class="float center">
             <div class="container-float">
-                <img class="img" src="img/5.webp" alt="foto5">
-                <img class="img-hover" src="img/5b.webp" alt="foto-hover">
+                <div class="img fifth"></div>
                 <span class="heart"></span>
             </div>
             <p class="name">Guess</p>
@@ -78,8 +74,7 @@
 
         <div class="float right">
             <div class="container-float">
-                <img class="img" src="img/6.webp" alt="foto6">
-                <img class="img-hover" src="img/6b.webp" alt="foto-hover">
+                <div class="img sixth"></div>
                 <span class="green no-discount">Sostenibilità</span>
                 <span class="heart"></span>
             </div>
